--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
@@ -105,10 +105,30 @@ nav {
     }
 
     body {
-        background-color: #333;  /* Adjust if you want the body background to change too */
+        background-color: #333;  
     }
 
     #mode-toggle {
         color: var(--text-color-dark);
     }
+}
+/* Grid Layout for images */
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+    margin-top: 20px;
+}
+
+/* Style for images inside the grid layout */
+.image-grid img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+/* Hover effect for images in the grid */
+.image-grid img:hover {
+    transform: scale(2.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
